deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test05
spec:
  selector:
    matchLabels:
      app: test05
  template:
    metadata:
      labels:
        app: test05
    spec:
      nodeSelector:
        dtarget: worker
      containers:
      - name: test05-container
        image: quay.apps.ocp.komsco.co.kr/komsco/test05:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: quay-registry-secret
