service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Demonstration
  namespace: app
spec:
  selector:
    app: Demonstration
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
