route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-test01
  namespace: app
spec:
  path: /
  to:
    kind: Service
    name: 'test01'
